manifests/apps/home/frigate/deploy-targets/talos/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
  - "frigate.vanillax.me"
  rules:
  - matches:
    - path:
        type: PathPrefix 
        value: /
    backendRefs:
        - group: ""
          kind: Service
          name: frigate-http
          port: 5000
          weight: 1
